examples/test/testpolicy17121.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17121
  namespace: namespace98
spec:
  podSelector:
    matchLabels:
      key31: value20
      key22: value42
      key20: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value8
          key16: value13
          key38: value43
      podSelector:
        matchLabels:
          key45: value9
          key12: value6
